implement 03-streaming-analytics: LinkedBlockingQueue event bus, tumbling windows, concurrent harness
- Replace stub MiniHttpServer with real streaming server: LinkedBlockingQueue<StreamEvent>
  as event bus, 2 virtual consumer threads, ConcurrentHashMap tumbling windows (10s buckets)
- Routes: POST /api/v1/events, GET /api/v1/windows/{key}, GET /api/v1/windows, GET /api/v1/lag
- Prometheus metrics: streaming_events_published_total, streaming_consumer_lag, streaming_windows_active
- Harness: concurrent ExecutorService load (8 threads), wall-clock throughput, 3 runs default
- Collects GC ms, RSS (ps -o rss=), CPU (OperatingSystemMXBean)
- Grafana: provisioning datasource + dashboard provider; 4 panels wired to streaming metrics
- Smoke: REQUESTS=40 ./run.sh test passes cleanly (~4600 req/sec on laptop)

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>